# bug-triage-copilot

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
apps/api/: __init__.py  main.py
apps/api/routes/: __init__.py  api.py  ui.py  webhooks.py
apps/api/templates/: base.html  dashboard.html  issue_detail.html  repo_config.html
apps/worker/: __init__.py  main.py
apps/worker/jobs/: __init__.py  triage.py
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial.py  002_add_enhancement_fields.py
scripts/: send_test_webhook.py
tests/: conftest.py
tests/fixtures/: issue_opened_bug.json  issue_opened_enhancement.json  issue_opened_minimal.json  issue_opened_question.json
tests/integration/: test_webhook_flow.py
tests/unit/: test_llm_parsing.py  test_secret_redaction.py  test_webhook.py
